fix z-index of background

--- a/src/assets/css/theme.css
+++ b/src/assets/css/theme.css
@@ -6,6 +6,15 @@ Theme	 :  Default
 */
 /*! WRITE YOUR CUSTOM STYLE **/
 
-.card-s4 { padding: 55px 30px 110px; box-shadow: 0px 5px 46px rgba(235, 235, 235, 1); }
+.card-s4 {
+    padding: 55px 30px 110px;
+    box-shadow: 0px 5px 46px rgba(235, 235, 235, 1);
+}
 
-.project-img { height: 6em;}
+.project-img {
+    height: 6em;
+}
+
+.z-0 {
+    z-index: 0;
+}
